# boundary-first-flattening

./: CMakeLists.txt
cmake/: FindSuiteSparse.cmake
linear-algebra/include/: Cholesky.h  Cholesky.inl  Common.h  DenseMatrix.h  DenseMatrix.inl  SparseMatrix.h  SparseMatrix.inl
linear-algebra/src/: Common.cpp
mesh/include/: MeshData.h
mesh/src/: BFFMesh.cpp  MeshIO.cpp
openmesh-interface/: bff_openmesh.cpp
openmesh-interface/include/: bff_openmesh.h
project/include/: BinPacking.h  HoleFiller.h
